Adição das funcionalidades de login e cadastro.

--- a/curriculo/templates/home.html
+++ b/curriculo/templates/home.html
@@ -26,7 +26,6 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo, augue nec pulvinar consectetur, enim ex congue purus, a vulputate quam tortor non sem. Aenean condimentum, dui eu placerat cursus, sem lectus ultrices libero, ut aliquam lacus nunc ut turpis. Ut vulputate faucibus elit sit amet mattis. Cras eget sagittis nunc, vitae mattis est. Praesent metus nisl, elementum ut purus at, dignissim volutpat massa. Pellentesque at faucibus risus. Donec consequat dictum metus, sed rutrum nibh auctor sit amet. Etiam sollicitudin nunc eu dui ornare pharetra. In hac habitasse platea dictumst. Fusce vulputate dui et laoreet tincidunt. Nunc id sodales nulla. Phasellus augue risus, malesuada sed lacinia vitae, auctor non mi. Nullam sit amet dui enim.</p>
 			</div>
 		</div>
-		<div>
 		<div class="endereco">
 			<h1>Endereço</h1>
 			<p>Universidade Federal de Sergipe, Centro de Ciências Exatas e Tecnologia</p>
@@ -34,6 +33,11 @@
 			<p>Cidade Universitária Prof. Aloísio Campos</p>
 			<p>Rosa Elze 49100-000 - São Cristóvão, SE - Brasil</p>
 		</div>
+		<div class="LinhaPesquisa">
+			<h1>Linhas de Pesquisa</h1>
+		</div>
+		<div class="ProjetoPesquisa">
+			<h1>Projetos de Pesquisa</h1>
 		</div>
 	</div>
 </body>
