Finalização da manipulação da formação acadêmica.

--- a/curriculo/templates/manage-profile.html
+++ b/curriculo/templates/manage-profile.html
@@ -223,36 +223,37 @@
                 </div>
             </fieldset>
 			</form>
-			<form metho="POST">
-            <fieldset>
-                <h2 id="proeficiencia_idioma">Idiomas</h2>
-				<div class="input-block">
-				{{ proeficiencia_idioma_form.management_form}}
-				{% for hidden in proeficiencia_idioma_form.hidden_fields %}
-					{{ hidden }}
-				{% endfor %}
-				{% for form_idioma in proeficiencia_idioma_form %}
-				<section class="accordion">
-					<input type="checkbox" name="collapse-idioma" id="idioma{{ forloop.counter }}">
-					<h2 class="handle">
-					  <label for="idioma{{ forloop.counter }}">Idioma {{ forloop.counter }}</label>
-					</h2>
-					<div class="content">
-						{{ form_idioma.errors }}
-						{{ form_idioma }}
+			<form method="POST">
+				{% csrf_token %}
+				<fieldset>
+					<h2 id="proeficiencia_idioma">Idiomas</h2>
+					<div class="input-block">
+					{{ proeficiencia_idioma_form.management_form}}
+					{% for hidden in proeficiencia_idioma_form.hidden_fields %}
+						{{ hidden }}
+					{% endfor %}
+					{% for form_idioma in proeficiencia_idioma_form %}
+					<section class="accordion">
+						<input type="checkbox" name="collapse-idioma" id="idioma{{ forloop.counter }}">
+						<h2 class="handle">
+						<label for="idioma{{ forloop.counter }}">Idioma {{ forloop.counter }}</label>
+						</h2>
+						<div class="content">
+							{{ form_idioma.errors }}
+							{{ form_idioma }}
+						</div>
+					</section>
+					{% endfor %}
 					</div>
-				</section>
-				{% endfor %}
-				</div>
-				<div class="wrapper">
-					<div class="input-block">                    
-						<input type="submit" value="Adicionar Idioma" name="add_idioma" id="add_idioma">
+					<div class="wrapper">
+						<div class="input-block">                    
+							<input type="submit" value="Adicionar Idioma" name="add_idioma" id="add_idioma">
+						</div>
+						<div class="input-block">                    
+							<input type="submit" value="Salvar Idioma" name="save_idioma" id="save_idioma">
+						</div>
 					</div>
-					<div class="input-block">                    
-						<input type="submit" value="Salvar Idioma" name="save_idioma" id="save_idioma">
-					</div>
-				</div>
-            </fieldset>
+				</fieldset>
 			</form>
 			<form method="POST">
             <fieldset>
